--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&family=Raleway:wght@200;300;400;500;600;700;800&display=swap');
 
-  /* @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400;500;600;700;800&display=swap'); */
-
 *,
 *::before,
 *::after {
@@ -10,22 +8,30 @@
   padding: 0;
 }
 :root{
-  
+    --heading-font:'Raleway', sans-serif;
+    --text-font: 'Montserrat', sans-serif;
+    --cl-black: #000B0A;
+    --cl-green: #2EC4B6;
+    --cl-grey: #737373;
+    --cl-gray-3: #F0F0F0;
+    --label-text-color: #011C34;
 }
 html{
     -moz-tab-size: 4;
     -o-tab-size: 4;
     tab-size: 4;
     line-height: 1.5;
-    font-family: 'Raleway','Montserrat' sans-serif;
 }
+
 body { 
     margin: 0;
     line-height: inherit;
     width:100%;
-    background-color: #FFFFFF;
+    background: #2ec4b50d;
     -webkit-font-smoothing: antialiased;
 }
+
+
 img,
 picture,
 video,
@@ -43,7 +49,12 @@ select {
   color:inherit;
   font-size:100%;
 }
-p,
+input,select{
+    font-family: var(--text-font);
+}
+label{
+    font-family: var(--heading-font);
+}
 h1,
 h2,
 h3,
@@ -51,6 +62,11 @@ h4,
 h5,
 h6 {
   overflow-wrap: break-word;
+  font-family: var(--heading-font);
+}
+p{
+    overflow-wrap: break-word;
+    font-family: var(--text-font);
 }
 a{
     color:inherit;
@@ -107,3 +123,127 @@ button{
     border:none;
 }
 /* css reset end */
+.container{
+    display: flex;
+    justify-content: center;
+    gap:26px;
+}
+.container .left-side-content{
+    display: flex;
+    flex-direction: column;
+    margin:6rem auto;
+    max-width: 450px;
+}
+.left-side-content .logo > svg{
+    width: 77.333px;
+    height: 80px;
+    flex-shrink: 0;
+    filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.10));
+}
+.left-side-content .text {
+    margin-block-start: 2rem;
+}
+.left-side-content .text > h3{
+    color: var(--cl-black);
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 50px;
+    letter-spacing: -0.8px;
+}
+
+/* right-content styling */
+.right-side-content{
+    margin: 28px auto;
+    flex-shrink: 0;
+}
+.form-container{
+    width: 580px;
+    padding: 22px;
+    border-radius: 6px;
+    background-color: #FFF;
+    box-shadow: 0px 4px 50px 0px rgba(4, 8, 19, 0.10);
+}
+/* styling for 
+each row and labels, 
+input, select */
+form .user-info{ 
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap:15px;
+    margin-bottom: 12px;
+}
+form label{
+    color:var(--label-text-color);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: 0.1px;
+}
+form input, select{
+    border-radius: 2px;
+    border: 1px solid var(--cl-gray-3);
+    width:100%;
+    height: 48px;
+    margin-top: 6px;
+    padding-block:8px ;
+    padding-inline:14px;
+}
+form select{
+    color:var(--cl-grey);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 20px;
+    letter-spacing: 0.2px;
+}
+form input[type="text"], 
+input[type="date"]
+{
+    color: #011C34;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: 0.2px;
+}
+form.reg-form .stretched{
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+}
+.reg-form .stretched{
+    margin-bottom: 16px;
+}
+/* registration button */
+.form-button .button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height:48px;
+    color:  #FFF;
+    text-align: center;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: 0.2px;
+    font-family: 'Raleway', sans-serif;
+    background-color: var(--cl-green);
+    filter: drop-shadow(0px 10px 40px rgba(0, 0, 0, 0.10));
+}
+.form-container p{
+    color: #000;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 25px;
+    margin-block: 12px;
+}
+.form-container p > a{
+    color: var(--cl-green);
+    font-weight: 500;
+    text-decoration-line: underline;
+    cursor: pointer;
+}
