--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
     margin: 0;
     line-height: inherit;
     width:100%;
-    background: #2ec4b50d;
+    background:#F7FDFC;
     -webkit-font-smoothing: antialiased;
 }
 
@@ -126,39 +126,54 @@ button{
 .container{
     display: flex;
     justify-content: center;
-    gap:26px;
+    align-items: center;
+    gap:20px;
+    margin:0 140px;
 }
 .container .left-side-content{
     display: flex;
     flex-direction: column;
-    margin:6rem auto;
-    max-width: 450px;
+    margin-block-start:auto;
+    margin-block-end:auto;
 }
 .left-side-content .logo > svg{
     width: 77.333px;
     height: 80px;
     flex-shrink: 0;
+    margin-left: -10px;
     filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.10));
 }
 .left-side-content .text {
-    margin-block-start: 2rem;
+    margin-block-start: 18px;
+    max-width: 460px;
 }
 .left-side-content .text > h3{
     color: var(--cl-black);
+    margin-block-end: 12px;
     font-size: 40px;
     font-style: normal;
     font-weight: 700;
     line-height: 50px;
     letter-spacing: -0.8px;
 }
+.left-side-content .text p{
+    color: var(--cl-grey);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 25px; 
+}
+.text p.small-screen-p{
+    display: none;
+}
 
 /* right-content styling */
 .right-side-content{
-    margin: 28px auto;
+    margin-block: 28px;
     flex-shrink: 0;
 }
 .form-container{
-    width: 580px;
+    max-width: 580px;
     padding: 22px;
     border-radius: 6px;
     background-color: #FFF;
@@ -171,7 +186,7 @@ form .user-info{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap:15px;
-    margin-bottom: 12px;
+    margin-bottom: 16px;
 }
 form label{
     color:var(--label-text-color);
@@ -184,11 +199,18 @@ form label{
 form input, select{
     border-radius: 2px;
     border: 1px solid var(--cl-gray-3);
+    outline: none;
     width:100%;
     height: 48px;
     margin-top: 6px;
     padding-block:8px ;
     padding-inline:14px;
+    transition: all 0.2s ease-out;
+}
+form input:focus,
+select:focus{
+    border-radius: 2px;
+    border: 3px solid #F7FDFC;
 }
 form select{
     color:var(--cl-grey);
@@ -209,7 +231,6 @@ input[type="date"]
     letter-spacing: 0.2px;
 }
 form.reg-form .stretched{
-    width: 500px;
     display: flex;
     flex-direction: column;
 }
@@ -233,17 +254,133 @@ form.reg-form .stretched{
     background-color: var(--cl-green);
     filter: drop-shadow(0px 10px 40px rgba(0, 0, 0, 0.10));
 }
+.form-button .button:hover{
+    background-color: #26afa1;
+}
 .form-container p{
     color: #000;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
     line-height: 25px;
-    margin-block: 12px;
+    margin-block-start: 12px;
 }
 .form-container p > a{
     color: var(--cl-green);
     font-weight: 500;
     text-decoration-line: underline;
     cursor: pointer;
+}
+.right-side-content .agreement p{
+    display: none;
+}
+@media screen and (max-width:768px) {
+    .container{
+        margin:0 28px;
+        display: grid;
+        grid-template-columns: 0.5fr 1fr;
+    }
+    .left-side-content .text > h3{
+        font-size: 30px;
+    }
+  
+}
+@media screen and (max-width:400px) {
+    .container{
+        grid-template-columns: 1fr;
+        margin:18px 20px;
+    }
+    .left-side-content .logo > svg .icon{
+        width: 38.667px;
+        height: 40px;
+        flex-shrink: 0;
+        margin-left: -4px;
+    }
+    .text p{
+        display: none;
+    }
+    .text p.small-screen-p{
+        display: block;
+        color: var(--cl-grey);
+        font-size: 16px;
+        font-weight: 300;
+        line-height: 25px; 
+    }
+    .left-side-content .text > h3{
+        font-size: 30px;
+        line-height: normal;
+        letter-spacing: -0.8px;
+    }
+    .right-side-content .agreement p{
+        display: block;
+        color: #000;
+        text-align: center;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 25px;
+        margin-block-start: 24px;
+    }
+
+}
+@media screen and (max-width:375px) {
+    .container{
+        flex-direction: column;
+        margin:18px 20px;
+    }
+    .form-container{
+        width:327px;
+        padding-block: 30px;
+        padding-inline: 16px;
+    }
+    .form-container form.reg-form{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .reg-form div{
+        width:295px;
+    }
+    .reg-form .user-info{
+        grid-template-columns: 1fr;
+    }
+    .reg-form label{
+        font-size: 14px;
+        font-weight: 600;
+        line-height: normal;
+        letter-spacing: 0.1px;
+    }
+    .reg-form input, select{
+        height: 48px;
+        flex-shrink: 0;
+        margin-block-start:10px ;
+    }
+    form input[type="text"], 
+    input[type="date"]{
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 300;
+        line-height: 20px;
+        letter-spacing: 0.2px;
+    }
+    .reg-form .form-button a{
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+        letter-spacing: 0.2px;
+    }
+    .form-container p{
+        display: none;
+    }
+ 
+}
+@media screen and (max-width:320px) {
+    .form-container{
+        width:284px;
+    }
+    .reg-form div{
+        width:264px;
+    }
 }
